force-app/main/default/objects/SSP_Attendance__c/SSP_Attendance__c.object-meta.xml
<CustomObject>
    <description>Stores education and school related information</description>
    <label>SSP Attendance</label>
    <nameField>
        
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        
        <label>SSP_Attendance Name</label>
        
        <type>Text</type>
        
    </nameField>
    <pluralLabel>SSP Attendance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>