force-app/main/default/objects/SSP_Attendance__c/fields/EnrollmentTypeCode__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentTypeCode__c</fullName>
    <description>This field is used to store Enrollment Type for an Attendance record</description>
    <label>Enrollment Type</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>EnrollmentTypes</valueSetName>
        
        </valueSet>
</CustomField>