force-app/main/default/objects/SSP_Attendance__c/fields/ExpectedGraduationDate__c.field-meta.xml
<CustomField>
    <fullName>ExpectedGraduationDate__c</fullName>
    <description>This field is used to store Expected Graduation date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Expected Graduation Date</label>
    <type>Date</type>
</CustomField>