force-app/main/default/objects/SSP_Attendance__c/fields/InstitutionSchoolName__c.field-meta.xml
<CustomField>
    <fullName>InstitutionSchoolName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to indicate the institution for which attendance is recorded</description>
    <label>Name of School</label>
    <referenceTo>SSP_Institution__c</referenceTo>
    <relationshipName>SSP_Attendance</relationshipName>
    <type>Lookup</type>
</CustomField>