force-app/main/default/objects/SSP_Attendance__c/fields/InstitutionSchoolTypeCode__c.field-meta.xml
<CustomField>
    <fullName>InstitutionSchoolTypeCode__c</fullName>
    <description>This field is used to store Institution School type</description>
    <label>Institution School Type</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>InstitutionSchoolType</valueSetName>
        
        </valueSet>
</CustomField>