force-app/main/default/objects/SSP_Attendance__c/fields/IsAssignedToInstitutionProgramToggle__c.field-meta.xml
<CustomField>
    <fullName>IsAssignedToInstitutionProgramToggle__c</fullName>
    <description>This field is used to indicate whether the assigned institution is through program</description>
    <label>Assigned Institution through Program ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>