force-app/main/default/objects/SSP_Attendance__c/fields/IsDeleted__c.field-meta.xml
<CustomField>
    <fullName>IsDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to whether the current education record is deleted</description>
    <label>Is Deleted</label>
    <type>Checkbox</type>
</CustomField>