force-app/main/default/objects/SSP_Attendance__c/fields/IsParticipatingInWorkStudyProgramToggle__c.field-meta.xml
<CustomField>
    <fullName>IsParticipatingInWorkStudyProgramToggle__c</fullName>
    <description>This field is used to indicate the member is participating in work study program</description>
    <label>Is Participating in Work Study Program ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>