force-app/main/default/objects/SSP_Attendance__c/fields/PlacedThroughProgramCode__c.field-meta.xml
<CustomField>
    <fullName>PlacedThroughProgramCode__c</fullName>
    <description>This field is used to store placed through program code</description>
    <label>Program</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>PlacedThroughProgram</valueSetName>
        
        </valueSet>
</CustomField>