force-app/main/default/objects/SSP_Attendance__c/fields/School_Name__c.field-meta.xml
<CustomField>
    <fullName>School_Name__c</fullName>
    <description>School Name to capture text if we don&apos;t have Institution lookup</description>
    <encryptionScheme>None</encryptionScheme>
    <label>School Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>