force-app/main/default/objects/SSP_Attendance__c/fields/SSP_Application__c.field-meta.xml
<CustomField>
    <fullName>SSP_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to indicate the application in which the attendance records are created</description>
    <label>SSP Application</label>
    <referenceTo>SSP_Application__c</referenceTo>
    <relationshipLabel>SSP Attendance</relationshipLabel>
    <relationshipName>SSP_Attendance</relationshipName>
    <type>Lookup</type>
</CustomField>